--- a/airlinecalendar-main/AirlineCalendar/force-app/main/default/lwc/airlineCalendar/airlineCalendar.html
+++ b/airlinecalendar-main/AirlineCalendar/force-app/main/default/lwc/airlineCalendar/airlineCalendar.html
@@ -1,6 +1,6 @@
 <template>
     <!-- Booking Form -->
-    <lightning-card title="Airline Calendar" icon-name="standard:travel_mode">
+    <lightning-card title="Airline Booking" icon-name="standard:travel_mode">
         <div class="slds-p-around_medium">
             
             <lightning-input 
